移除 Trinity 数量绑定计划缓存